--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
                     android:layout_height="wrap_content"/>
                 <ListView
                     android:id="@+id/lstInput"
+                    android:choiceMode="singleChoice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -80,6 +81,7 @@
                     android:layout_height="wrap_content"/>
                 <ListView
                     android:id="@+id/lstOutput"
+                    android:choiceMode="singleChoice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
