--- a/app/src/main/res/layout/lst_item_input.xml
+++ b/app/src/main/res/layout/lst_item_input.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     android:id="@+id/lstInputItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/list_item_select"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
